freeimage.nim


proc FreeImage_ToneMapping*(dib: ptr FIBITMAP; tmo: FREE_IMAGE_TMO; 
                            first_param: cdouble; second_param: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_ToneMapping", dynlib: FreeImageLib.}
proc FreeImage_TmoDrago03*(src: ptr FIBITMAP; gamma: cdouble; exposure: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_TmoDrago03", dynlib: FreeImageLib.}
proc FreeImage_TmoReinhard05*(src: ptr FIBITMAP; intensity: cdouble; 
                              contrast: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_TmoReinhard05", dynlib: FreeImageLib.}
proc FreeImage_TmoReinhard05Ex*(src: ptr FIBITMAP; intensity: cdouble; 
                                contrast: cdouble; adaptation: cdouble; 
                                color_correction: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_TmoReinhard05Ex", dynlib: FreeImageLib.}
proc FreeImage_TmoFattal02*(src: ptr FIBITMAP; color_saturation: cdouble; 
                            attenuation: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_TmoFattal02", dynlib: FreeImageLib.}
# ZLib interface -----------------------------------------------------------

proc FreeImage_ZLibCompress*(target: ptr BYTE; target_size: DWORD; 
                             source: ptr BYTE; source_size: DWORD): DWORD {.
    importc: "FreeImage_ZLibCompress", dynlib: FreeImageLib.}
proc FreeImage_ZLibUncompress*(target: ptr BYTE; target_size: DWORD; 
                               source: ptr BYTE; source_size: DWORD): DWORD {.
    importc: "FreeImage_ZLibUncompress", dynlib: FreeImageLib.}
proc FreeImage_ZLibGZip*(target: ptr BYTE; target_size: DWORD; source: ptr BYTE; 
                         source_size: DWORD): DWORD {.
    importc: "FreeImage_ZLibGZip", dynlib: FreeImageLib.}
proc FreeImage_ZLibGUnzip*(target: ptr BYTE; target_size: DWORD; 
                           source: ptr BYTE; source_size: DWORD): DWORD {.
    importc: "FreeImage_ZLibGUnzip", dynlib: FreeImageLib.}
proc FreeImage_ZLibCRC32*(crc: DWORD; source: ptr BYTE; source_size: DWORD): DWORD {.
    importc: "FreeImage_ZLibCRC32", dynlib: FreeImageLib.}
# --------------------------------------------------------------------------
# Metadata routines --------------------------------------------------------
# --------------------------------------------------------------------------
# tag creation / destruction

proc FreeImage_CreateTag*(): ptr FITAG {.importc: "FreeImage_CreateTag", 
    dynlib: FreeImageLib.}
proc FreeImage_DeleteTag*(tag: ptr FITAG) {.importc: "FreeImage_DeleteTag", 
    dynlib: FreeImageLib.}
proc FreeImage_CloneTag*(tag: ptr FITAG): ptr FITAG {.
    importc: "FreeImage_CloneTag", dynlib: FreeImageLib.}
# tag getters and setters

proc FreeImage_GetTagKey*(tag: ptr FITAG): cstring {.
    importc: "FreeImage_GetTagKey", dynlib: FreeImageLib.}
proc FreeImage_GetTagDescription*(tag: ptr FITAG): cstring {.
    importc: "FreeImage_GetTagDescription", dynlib: FreeImageLib.}
proc FreeImage_GetTagID*(tag: ptr FITAG): WORD {.importc: "FreeImage_GetTagID", 
    dynlib: FreeImageLib.}
proc FreeImage_GetTagType*(tag: ptr FITAG): FREE_IMAGE_MDTYPE {.
    importc: "FreeImage_GetTagType", dynlib: FreeImageLib.}
proc FreeImage_GetTagCount*(tag: ptr FITAG): DWORD {.
    importc: "FreeImage_GetTagCount", dynlib: FreeImageLib.}
proc FreeImage_GetTagLength*(tag: ptr FITAG): DWORD {.
    importc: "FreeImage_GetTagLength", dynlib: FreeImageLib.}
proc FreeImage_GetTagValue*(tag: ptr FITAG): pointer {.
    importc: "FreeImage_GetTagValue", dynlib: FreeImageLib.}
proc FreeImage_SetTagKey*(tag: ptr FITAG; key: cstring): BOOL {.
    importc: "FreeImage_SetTagKey", dynlib: FreeImageLib.}
proc FreeImage_SetTagDescription*(tag: ptr FITAG; description: cstring): BOOL {.
    importc: "FreeImage_SetTagDescription", dynlib: FreeImageLib.}
proc FreeImage_SetTagID*(tag: ptr FITAG; id: WORD): BOOL {.
    importc: "FreeImage_SetTagID", dynlib: FreeImageLib.}
proc FreeImage_SetTagType*(tag: ptr FITAG; typen: FREE_IMAGE_MDTYPE): BOOL {.
    importc: "FreeImage_SetTagType", dynlib: FreeImageLib.}
proc FreeImage_SetTagCount*(tag: ptr FITAG; count: DWORD): BOOL {.
    importc: "FreeImage_SetTagCount", dynlib: FreeImageLib.}
proc FreeImage_SetTagLength*(tag: ptr FITAG; length: DWORD): BOOL {.
    importc: "FreeImage_SetTagLength", dynlib: FreeImageLib.}
proc FreeImage_SetTagValue*(tag: ptr FITAG; value: pointer): BOOL {.
    importc: "FreeImage_SetTagValue", dynlib: FreeImageLib.}
# iterator

proc FreeImage_FindFirstMetadata*(model: FREE_IMAGE_MDMODEL; dib: ptr FIBITMAP; 
                                  tag: ptr ptr FITAG): ptr FIMETADATA {.
    importc: "FreeImage_FindFirstMetadata", dynlib: FreeImageLib.}
proc FreeImage_FindNextMetadata*(mdhandle: ptr FIMETADATA; tag: ptr ptr FITAG): BOOL {.
    importc: "FreeImage_FindNextMetadata", dynlib: FreeImageLib.}
proc FreeImage_FindCloseMetadata*(mdhandle: ptr FIMETADATA) {.
    importc: "FreeImage_FindCloseMetadata", dynlib: FreeImageLib.}
# metadata setter and getter

proc FreeImage_SetMetadata*(model: FREE_IMAGE_MDMODEL; dib: ptr FIBITMAP; 
                            key: cstring; tag: ptr FITAG): BOOL {.
    importc: "FreeImage_SetMetadata", dynlib: FreeImageLib.}
proc FreeImage_GetMetadata*(model: FREE_IMAGE_MDMODEL; dib: ptr FIBITMAP; 
                            key: cstring; tag: ptr ptr FITAG): BOOL {.
    importc: "FreeImage_GetMetadata", dynlib: FreeImageLib.}
# helpers

proc FreeImage_GetMetadataCount*(model: FREE_IMAGE_MDMODEL; dib: ptr FIBITMAP): cuint {.
    importc: "FreeImage_GetMetadataCount", dynlib: FreeImageLib.}
proc FreeImage_CloneMetadata*(dst: ptr FIBITMAP; src: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_CloneMetadata", dynlib: FreeImageLib.}
# tag to C string conversion

proc FreeImage_TagToString*(model: FREE_IMAGE_MDMODEL; tag: ptr FITAG; 
                            Make: cstring): cstring {.
    importc: "FreeImage_TagToString", dynlib: FreeImageLib.}
# --------------------------------------------------------------------------
# Image manipulation toolkit -----------------------------------------------
# --------------------------------------------------------------------------
# rotation and flipping
#/ @deprecated see FreeImage_Rotate

proc FreeImage_RotateClassic*(dib: ptr FIBITMAP; angle: cdouble): ptr FIBITMAP {.
    importc: "FreeImage_RotateClassic", dynlib: FreeImageLib.}
proc FreeImage_Rotate*(dib: ptr FIBITMAP; angle: cdouble; bkcolor: pointer): ptr FIBITMAP {.
    importc: "FreeImage_Rotate", dynlib: FreeImageLib.}
proc FreeImage_RotateEx*(dib: ptr FIBITMAP; angle: cdouble; x_shift: cdouble; 
                         y_shift: cdouble; x_origin: cdouble; y_origin: cdouble; 
                         use_mask: BOOL): ptr FIBITMAP {.
    importc: "FreeImage_RotateEx", dynlib: FreeImageLib.}
proc FreeImage_FlipHorizontal*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_FlipHorizontal", dynlib: FreeImageLib.}
proc FreeImage_FlipVertical*(dib: ptr FIBITMAP): BOOL {.
    importc: "FreeImage_FlipVertical", dynlib: FreeImageLib.}
proc FreeImage_JPEGTransform*(src_file: cstring; dst_file: cstring; 
                              operation: FREE_IMAGE_JPEG_OPERATION; 
                              perfect: BOOL): BOOL {.
    importc: "FreeImage_JPEGTransform", dynlib: FreeImageLib.}
proc FreeImage_JPEGTransformU*(src_file: ptr uint16; dst_file: ptr uint16; 
                               operation: FREE_IMAGE_JPEG_OPERATION; 
                               perfect: BOOL): BOOL {.
    importc: "FreeImage_JPEGTransformU", dynlib: FreeImageLib.}
# upsampling / downsampling

proc FreeImage_Rescale*(dib: ptr FIBITMAP; dst_width: cint; dst_height: cint; 
                        filter: FREE_IMAGE_FILTER): ptr FIBITMAP {.
    importc: "FreeImage_Rescale", dynlib: FreeImageLib.}
proc FreeImage_MakeThumbnail*(dib: ptr FIBITMAP; max_pixel_size: cint; 
                              convert: BOOL): ptr FIBITMAP {.
    importc: "FreeImage_MakeThumbnail", dynlib: FreeImageLib.}
# color manipulation routines (point operations)

proc FreeImage_AdjustCurve*(dib: ptr FIBITMAP; LUT: ptr BYTE; 
                            channel: FREE_IMAGE_COLOR_CHANNEL): BOOL {.
    importc: "FreeImage_AdjustCurve", dynlib: FreeImageLib.}
proc FreeImage_AdjustGamma*(dib: ptr FIBITMAP; gamma: cdouble): BOOL {.
    importc: "FreeImage_AdjustGamma", dynlib: FreeImageLib.}
proc FreeImage_AdjustBrightness*(dib: ptr FIBITMAP; percentage: cdouble): BOOL {.
    importc: "FreeImage_AdjustBrightness", dynlib: FreeImageLib.}
proc FreeImage_AdjustContrast*(dib: ptr FIBITMAP; percentage: cdouble): BOOL {.
    importc: "FreeImage_AdjustContrast", dynlib: FreeImageLib.}
proc FreeImage_Invert*(dib: ptr FIBITMAP): BOOL {.importc: "FreeImage_Invert", 
    dynlib: FreeImageLib.}
proc FreeImage_GetHistogram*(dib: ptr FIBITMAP; histo: ptr DWORD; 
                             channel: FREE_IMAGE_COLOR_CHANNEL): BOOL {.
    importc: "FreeImage_GetHistogram", dynlib: FreeImageLib.}
proc FreeImage_GetAdjustColorsLookupTable*(LUT: ptr BYTE; brightness: cdouble; 
    contrast: cdouble; gamma: cdouble; invert: BOOL): cint {.
    importc: "FreeImage_GetAdjustColorsLookupTable", dynlib: FreeImageLib.}
proc FreeImage_AdjustColors*(dib: ptr FIBITMAP; brightness: cdouble; 
                             contrast: cdouble; gamma: cdouble; invert: BOOL): BOOL {.
    importc: "FreeImage_AdjustColors", dynlib: FreeImageLib.}
proc FreeImage_ApplyColorMapping*(dib: ptr FIBITMAP; srccolors: ptr RGBQUAD; 
                                  dstcolors: ptr RGBQUAD; count: cuint; 
                                  ignore_alpha: BOOL; swap: BOOL): cuint {.
    importc: "FreeImage_ApplyColorMapping", dynlib: FreeImageLib.}
proc FreeImage_SwapColors*(dib: ptr FIBITMAP; color_a: ptr RGBQUAD; 
                           color_b: ptr RGBQUAD; ignore_alpha: BOOL): cuint {.
    importc: "FreeImage_SwapColors", dynlib: FreeImageLib.}
proc FreeImage_ApplyPaletteIndexMapping*(dib: ptr FIBITMAP; 
    srcindices: ptr BYTE; dstindices: ptr BYTE; count: cuint; swap: BOOL): cuint {.
    importc: "FreeImage_ApplyPaletteIndexMapping", dynlib: FreeImageLib.}
proc FreeImage_SwapPaletteIndices*(dib: ptr FIBITMAP; index_a: ptr BYTE; 
                                   index_b: ptr BYTE): cuint {.
    importc: "FreeImage_SwapPaletteIndices", dynlib: FreeImageLib.}
# channel processing routines

proc FreeImage_GetChannel*(dib: ptr FIBITMAP; channel: FREE_IMAGE_COLOR_CHANNEL): ptr FIBITMAP {.
    importc: "FreeImage_GetChannel", dynlib: FreeImageLib.}
proc FreeImage_SetChannel*(dst: ptr FIBITMAP; src: ptr FIBITMAP; 
                           channel: FREE_IMAGE_COLOR_CHANNEL): BOOL {.
    importc: "FreeImage_SetChannel", dynlib: FreeImageLib.}
proc FreeImage_GetComplexChannel*(src: ptr FIBITMAP; 
                                  channel: FREE_IMAGE_COLOR_CHANNEL): ptr FIBITMAP {.
    importc: "FreeImage_GetComplexChannel", dynlib: FreeImageLib.}
proc FreeImage_SetComplexChannel*(dst: ptr FIBITMAP; src: ptr FIBITMAP; 
                                  channel: FREE_IMAGE_COLOR_CHANNEL): BOOL {.
    importc: "FreeImage_SetComplexChannel", dynlib: FreeImageLib.}
# copy / paste / composite routines
